--- a/final-test/final-test-web/pom.xml
+++ b/final-test/final-test-web/pom.xml
@@ -46,6 +46,10 @@
             <artifactId>final-redis-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.finalframework.boot</groupId>
+            <artifactId>final-retrofit-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
             <optional>true</optional>
