--- a/final-json/final-json-core/pom.xml
+++ b/final-json/final-json-core/pom.xml
@@ -44,5 +44,10 @@
             <groupId>org.finalframework.data</groupId>
             <artifactId>final-data-context</artifactId>
         </dependency>
+        <dependency>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
