--- a/final-data/pom.xml
+++ b/final-data/pom.xml
@@ -18,5 +18,12 @@
         <version>0.5.3-SNAPSHOT</version>
     </parent>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
+    </dependencies>
+
 
 </project>
