--- a/final-coding/final-coding-spring/pom.xml
+++ b/final-coding/final-coding-spring/pom.xml
@@ -17,6 +17,11 @@
             <artifactId>final-coding-core</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.finalframework.data</groupId>
+            <artifactId>final-data-annotation</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
             <scope>provided</scope>
