--- a/pom.xml
+++ b/pom.xml
@@ -70,12 +70,12 @@
             <scope>compile</scope>
         </dependency>
 
-        <!--        <dependency>-->
-        <!--            <groupId>org.junit.jupiter</groupId>-->
-        <!--            <artifactId>junit-jupiter</artifactId>-->
-        <!--            <version>5.6.0</version>-->
-        <!--            <scope>test</scope>-->
-        <!--        </dependency>-->
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>5.6.0</version>
+            <scope>test</scope>
+        </dependency>
         <!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.junit.platform/junit-platform-surefire-provider &ndash;&gt;-->
         <!--        <dependency>-->
         <!--            <groupId>org.junit.platform</groupId>-->
