--- a/final-data/pom.xml
+++ b/final-data/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>final-data-annotation</module>
         <module>final-data-context</module>
+        <module>final-data-api</module>
     </modules>
 
     <parent>
