--- a/final-coding/final-coding-entity/pom.xml
+++ b/final-coding/final-coding-entity/pom.xml
@@ -18,11 +18,15 @@
         </dependency>
         <dependency>
             <groupId>org.finalframework.data</groupId>
-            <artifactId>final-data-context</artifactId>
+            <artifactId>final-data-annotation</artifactId>
         </dependency>
         <dependency>
             <artifactId>final-core</artifactId>
             <groupId>org.finalframework</groupId>
+        </dependency>
+        <dependency>
+            <groupId>org.finalframework.data</groupId>
+            <artifactId>final-data-context</artifactId>
         </dependency>
     </dependencies>
 
