--- a/final-coding/final-coding-spring/pom.xml
+++ b/final-coding/final-coding-spring/pom.xml
@@ -25,6 +25,14 @@
             <groupId>org.finalframework.data</groupId>
             <artifactId>final-data-annotation</artifactId>
         </dependency>
+        <dependency>
+            <artifactId>final-spring-annotation</artifactId>
+            <groupId>org.finalframework.spring</groupId>
+        </dependency>
+        <dependency>
+            <artifactId>final-spring-annotation</artifactId>
+            <groupId>org.finalframework.spring</groupId>
+        </dependency>
     </dependencies>
 
 </project>
