--- a/final-spring/final-spring-dashboard/pom.xml
+++ b/final-spring/final-spring-dashboard/pom.xml
@@ -3,8 +3,8 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>final-framework-parent</artifactId>
-        <groupId>org.finalframework</groupId>
+        <artifactId>final-spring</artifactId>
+        <groupId>org.finalframework.spring</groupId>
         <version>0.5.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
