--- a/final-document/pom.xml
+++ b/final-document/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xmlns="http://maven.apache.org/POM/4.0.0"
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>final-framework-parent</artifactId>
         <groupId>org.finalframework</groupId>
@@ -9,10 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
+    <groupId>org.finalframework.document</groupId>
     <artifactId>final-document</artifactId>
     <packaging>pom</packaging>
     <modules>
         <module>final-document-annotation</module>
+        <module>final-document-api</module>
     </modules>
 
 
