--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.finalframework</groupId>
@@ -123,6 +123,24 @@
             <dependency>
                 <groupId>org.finalframework.data</groupId>
                 <artifactId>final-data-context</artifactId>
+                <version>${final.version}</version>
+            </dependency>
+            <!-- ==================================================================================================== -->
+            <!-- ============================================ final-document ============================================ -->
+            <!-- ==================================================================================================== -->
+            <dependency>
+                <artifactId>final-document</artifactId>
+                <groupId>org.finalframework.document</groupId>
+                <version>${final.version}</version>
+            </dependency>
+            <dependency>
+                <artifactId>final-document-annotation</artifactId>
+                <groupId>org.finalframework.document</groupId>
+                <version>${final.version}</version>
+            </dependency>
+            <dependency>
+                <artifactId>final-document-api</artifactId>
+                <groupId>org.finalframework.document</groupId>
                 <version>${final.version}</version>
             </dependency>
             <!-- ==================================================================================================== -->
