--- a/final-test/final-test-web/pom.xml
+++ b/final-test/final-test-web/pom.xml
@@ -60,8 +60,14 @@
             <optional>true</optional>
         </dependency>
         <dependency>
-            <groupId>org.finalframework.data</groupId>
-            <artifactId>final-data-api</artifactId>
+            <artifactId>final-document-api</artifactId>
+            <groupId>org.finalframework.document</groupId>
+            <version>0.5.3-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <artifactId>final-document-api</artifactId>
+            <groupId>org.finalframework.document</groupId>
+            <scope>compile</scope>
             <version>0.5.3-SNAPSHOT</version>
         </dependency>
     </dependencies>
