--- a/final-redis/final-redis-core/pom.xml
+++ b/final-redis/final-redis-core/pom.xml
@@ -24,5 +24,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.finalframework.spring</groupId>
+            <artifactId>final-spring-annotation</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.finalframework.coding</groupId>
+            <artifactId>final-coding-spring</artifactId>
+        </dependency>
     </dependencies>
 </project>
