--- a/final-spiriter/final-spiriter-annotation/pom.xml
+++ b/final-spiriter/final-spiriter-annotation/pom.xml
@@ -3,13 +3,13 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>final-document</artifactId>
-        <groupId>org.finalframework.document</groupId>
+        <artifactId>final-spiriter</artifactId>
+        <groupId>org.finalframework.spiriter</groupId>
         <version>0.5.3-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>final-document-annotation</artifactId>
+    <artifactId>final-spiriter-annotation</artifactId>
 
 
 </project>
