--- a/final-coding/final-coding-core/pom.xml
+++ b/final-coding/final-coding-core/pom.xml
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-commons</artifactId>
-            <version>2.1.0.RELEASE</version>
+            <version>${spring.boot.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.velocity</groupId>
