--- a/final-data/final-data-annotation/pom.xml
+++ b/final-data/final-data-annotation/pom.xml
@@ -14,7 +14,7 @@
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-commons</artifactId>
-            <version>2.1.0.RELEASE</version>
+            <version>${spring.boot.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
