--- a/final-spiriter/final-spiriter-core/pom.xml
+++ b/final-spiriter/final-spiriter-core/pom.xml
@@ -2,7 +2,7 @@
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <artifactId>final-spiriter-api</artifactId>
+    <artifactId>final-spiriter-core</artifactId>
     <dependencies>
         <dependency>
             <artifactId>final-spiriter-annotation</artifactId>
