--- a/final-data/final-data-context/pom.xml
+++ b/final-data/final-data-context/pom.xml
@@ -53,6 +53,10 @@
             <artifactId>final-spring-annotation</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.finalframework.coding</groupId>
+            <artifactId>final-coding-spring</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-configuration-processor</artifactId>
             <scope>provided</scope>
