--- a/final-spiriter/pom.xml
+++ b/final-spiriter/pom.xml
@@ -16,6 +16,7 @@
         <module>final-spiriter-annotation</module>
         <module>final-spiriter-core</module>
         <module>final-spiriter-redis</module>
+        <module>final-spiriter-jdbc</module>
     </modules>
 
 
