--- a/final-spiriter/final-spiriter-jdbc/pom.xml
+++ b/final-spiriter/final-spiriter-jdbc/pom.xml
@@ -20,5 +20,21 @@
             <groupId>org.finalframework.coding</groupId>
             <artifactId>final-coding-spring</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.finalframework.boot</groupId>
+            <artifactId>final-data-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.finalframework.boot</groupId>
+            <artifactId>final-mybatis-spring-boot-starter</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.finalframework.coding</groupId>
+            <artifactId>final-coding-query</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.finalframework.coding</groupId>
+            <artifactId>final-coding-mapper</artifactId>
+        </dependency>
     </dependencies>
 </project>
