--- a/docs/_data/sidebar/mybatis.yml
+++ b/docs/_data/sidebar/mybatis.yml
@@ -70,6 +70,11 @@ menus:
             link: /mybatis/mapper/fragment/limit
             name: Limit
             mini: L
+      - id: example
+        icon: dashboard
+        name: Example
+        mini: EAP
+        link: /mybatis/mapper/example
 
   - id: handler
     icon: dashboard
