--- a/final-test/final-test-web/src/main/resources/application.yml
+++ b/final-test/final-test-web/src/main/resources/application.yml
@@ -2,7 +2,8 @@ spring:
   datasource:
     url: jdbc:mysql://localhost:3306/test?characterEncoding=utf8&verifyServerCertificate=false&useSSL=false&requireSSL=false&allowPublicKeyRetrieval=true&allowMultiQueries=true
     username: root
-    password: Aa000000
+    password: password
+    #    password: Aa000000
     driver-class-name: com.mysql.cj.jdbc.Driver
   main:
     allow-bean-definition-overriding: false
