--- a/final-cache/pom.xml
+++ b/final-cache/pom.xml
@@ -26,7 +26,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>final-cache-core</artifactId>
+    <artifactId>final-cache</artifactId>
 
 
     <dependencies>
