--- a/final-web/pom.xml
+++ b/final-web/pom.xml
@@ -49,7 +49,7 @@
         </dependency>
         <dependency>
             <groupId>org.finalframework</groupId>
-            <artifactId>final-cache-core</artifactId>
+            <artifactId>final-cache</artifactId>
         </dependency>
         <dependency>
             <groupId>org.finalframework</groupId>
