--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
     <modules>
         <module>final-annotation</module>
         <module>final-context</module>
-        <module>final-cache-core</module>
         <module>final-core</module>
+        <module>final-cache</module>
         <module>final-dubbo</module>
         <module>final-data-context</module>
         <module>final-json</module>
@@ -115,7 +115,7 @@
             </dependency>
             <dependency>
                 <groupId>org.finalframework</groupId>
-                <artifactId>final-cache-core</artifactId>
+                <artifactId>final-cache</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <dependency>
