--- a/final-json/pom.xml
+++ b/final-json/pom.xml
@@ -48,8 +48,8 @@
             <artifactId>final-annotation</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.finalframework</groupId>
-            <artifactId>final-annotation</artifactId>
+            <groupId>org.finalframework.auto</groupId>
+            <artifactId>final-auto-service</artifactId>
         </dependency>
     </dependencies>
 </project>
