--- a/pom.xml
+++ b/pom.xml
@@ -28,11 +28,13 @@
         <module>final-data</module>
         <module>final-monitor</module>
         <module>final-mybatis</module>
+        <module>final-sharding</module>
         <module>final-retrofit</module>
         <module>final-aop</module>
         <module>final-util</module>
         <module>final-zookeeper</module>
         <module>final-selenium</module>
+        <module>final-web</module>
     </modules>
     <properties>
         <java.version>1.8</java.version>
