--- a/final-web/pom.xml
+++ b/final-web/pom.xml
@@ -43,10 +43,6 @@
             <artifactId>final-context</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.finalframework</groupId>
-            <artifactId>final-context</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
         </dependency>
@@ -63,8 +59,8 @@
             <artifactId>final-annotation</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.finalframework</groupId>
-            <artifactId>final-annotation</artifactId>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
     </dependencies>
 </project>
