--- a/final-framework/pom.xml
+++ b/final-framework/pom.xml
@@ -116,6 +116,11 @@
                 <version>${project.version}</version>
             </dependency>
             <dependency>
+                <groupId>org.finalframework</groupId>
+                <artifactId>final-monitor</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
                 <groupId>org.mybatis</groupId>
                 <artifactId>mybatis</artifactId>
                 <version>${mybatis.version}</version>
